package com.github.shelgen.timesage.planning

enum class Availability {
    AVAILABLE, IF_NEED_BE, UNAVAILABLE
}
